--- a/src/app/admin/product/admin-product-detail/admin-product-detail.component.html
+++ b/src/app/admin/product/admin-product-detail/admin-product-detail.component.html
@@ -1,16 +1,16 @@
 <div class="row product-detail" *ngIf="product">
     <div class="col-md-5">
+        <button type="button" class="btn btn-secondary" (click)="goBack()">Back</button>
         <img class="product-image" style="width: 100%; height: 100%;"
             [src]="product.imageUrl || ''"
             [alt]="product.title">
     </div>
-
     <div class="col-md-7">
         <table class="table">
         <tbody>
         <tr>
-            <th>ID</th>
-            <td>{{product.$key}}</td>
+            <th>id</th>
+            <td>{{product.id}}</td>
         </tr>
         <tr>
             <th>Title</th>
