--- a/src/app/admin/product/admin-product-list/admin-product-list.component.html
+++ b/src/app/admin/product/admin-product-list/admin-product-list.component.html
@@ -1,4 +1,5 @@
 <div class="fit-body">
+  <button (click)="showAddForm()" class="btn btn-success">Add Product</button>
     <table class="table">
         <thead>
           <tr>
@@ -13,11 +14,18 @@
             <td>{{p.title}}</td>
             <td>{{p.author}}</td>
             <td>{{p.publisher}}</td>
-            <td><button type="button" class="btn btn-info" (click)="viewDetail(p)">Detail</button></td>
+            <td>
+              <button type="button" class="btn btn-info" (click)="viewDetail(p)">Detail</button>
+              <button type="button" class="btn btn-success" (click)="editProduct(p)">Edit</button> 
+              <button type="button" class="btn btn-danger" (click)="deleteProduct(p)">Delete</button> 
+            </td>
           </tr>
-         
         </tbody>
       </table>
 
-      <app-admin-product-detail [product]="selectedProduct"></app-admin-product-detail>
+      <!-- <app-admin-product-detail [product]="selectedProduct"></app-admin-product-detail>
+      <app-admin-product-form *ngIf="isAdd"></app-admin-product-form>
+      <app-admin-product-add-reactive *ngIf="isAddrf"></app-admin-product-add-reactive>  -->
+      <!-- <app-admin-product-form *ngIf="isEditting"></app-admin-product-form> -->
+      <!-- (submitForm)="handleSubmitForm($event) -->
 </div>
